<resources>

    <string name="app_name">Travel Mode Identification</string>
    <string name="travel_mode_q">What transport mode are you currently using? (Please update whenever you change mode)</string>
    <string name="action_settings">Settings</string>
    <string name="walking">Walking</string>
    <string name="cycling">Cycling</string>
    <string name="tram">Tram</string>
    <string name="train">Train</string>
    <string name="car_passenger">Car as Passenger</string>
    <string name="car_driver">Car as Driver</string>
    <string name="bus">Bus</string>
    <string name="waiting_mode">Waiting for next mode</string>
    <string name="not_travelling">Not currently travelling</string>
    <string name="send_button">Upload New Data</string>

</resources>
